Namespace (Org) Field
- adding the namespace field as requested
- removing the need to pass resource on any of deletes (feels odd)
- fixed up the json samples in docs
